<resources>
    <string name="app_name">cse438-assignment2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre: </string>
    <string name="rating">Rating:</string>
    <string name="title">TITLE</string>
    <string name="artist">ARTIST</string>
    <string name="duration">DURATION</string>
</resources>
