<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistTracks">
    <LinearLayout
        android:id="@+id/ptrack_header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="24sp"
                />
            <TextView
                android:id="@+id/ptrack_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="24sp"
                />
            <TextView
                android:id="@+id/ptrack_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/ptrack_columns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ptrack_header">

        <TextView
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            />
        <TextView
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/artist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ptrack_columns"
        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tracks_recycler_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>